--- a/resources/css/carrosel/carrosel.css
+++ b/resources/css/carrosel/carrosel.css
@@ -17,3 +17,46 @@
 .wall:target{
   display: block;
 }
+
+.menudenavegação{
+display: flex;
+flex-direction: row;
+padding: 20px;
+}
+
+.logo{
+  width: 80px;
+  height: 50px;
+}
+
+.itensdomenu{
+  width: 20%;
+  margin: 0%;
+}
+
+.main{
+  display: flex;
+  flex-direction: row;
+}
+
+.linhadecorativa{
+  width: 30px;
+  height: 3px;
+  align-self: center;
+}
+
+.titulo-section{
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  color:#B362E9;
+  align-self: center;
+  margin-bottom: 0%;
+  margin-left: 10px;
+}
+
+.sanfona{
+  padding-top: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
