inclui restante do código html

--- a/resources/css/carrosel/carrosel.css
+++ b/resources/css/carrosel/carrosel.css
@@ -1,62 +1,139 @@
-.container{
-  width: 150px;
-  height: 150px;
+/* Global */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    background-color: #000;
+  }
+  
+  /* Galeria */
+  
+  .gallery {
+    position: absolute;
+    top: 15%;
+    transform: translateY(-50%);
+    width: 100%;
+    height: 90%;
+    max-height: 28vw;
+    overflow: hidden;
+  }
+  
+  .gallery__stream {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    height: 100%;
+  }
+  
+  .gallery__item {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    transition: 1s all ease;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 5px;
+  }
+
+  /* Itens */
+
+.gallery__item:nth-child(1) {
+    left: 0;
+    z-index: 1;
+    transform: translateX(-100%) scale(.8);
+  }
+  
+  .gallery__item:nth-child(2) {
+    left: 0;
+    z-index: 2;
+    transform: translateX(-50%) scale(.8);
+  }
+  
+  .gallery__item:nth-child(3) {
+    left: 50%;
+    z-index: 4;
+    transform: translateX(-50%) scale(1);
+  }
+
+  .gallery__item:nth-child(4) {
+    left: 100%;
+    z-index: 2;
+    transform: translateX(-50%) scale(.8);
+  }
+  
+  .gallery__item:nth-child(n+5) {
+    left: 100%;
+    z-index: 1;
+    transform: scale(.8);
+  }
+  
+  
+  /* Backgrounds */
+
+.bg-1 {
+    background-image: url(img/imagem-1.jpg);
+  }
+.bg-2 {
+    background-image: url(img/imagem-2.jpg);
+}  
+.bg-3 {
+    background-image: url(img/imagem-3.jpg);
 }
 
-.wall{
-  display: none;
-  width: 100%;
+.bg-4 {
+    background-image: url(img/imagem-4.jpg);
+}
+
+.bg-5 {
+    background-image: url(img/imagem-5.jpg);
+}
+
+/* Controles */
+
+.gallery__prev,
+.gallery__next {
+  position: absolute;
+  top: 50%;
+  z-index: 4;
+  width: 50%;
   height: 100%;
+  transform: translateX(-50%) translateY(-50%) scale(.8);
+  cursor: pointer;
 }
 
-/* Corzinha de fundo para diferenciar */
-.wall-1{ background-color: #f00; }
-.wall-2{ background-color: #0f0; }
-.wall-3{ background-color: #00f; }
+.gallery__prev {
+  left: 0;
+}
 
-.wall:target{
+.gallery__next {
+  left: 100%;
+}
+
+/* Sombras */
+
+.gallery:before,
+.gallery:after {
   display: block;
-}
-
-.menudenavegação{
-display: flex;
-flex-direction: row;
-padding: 20px;
-}
-
-.logo{
-  width: 80px;
-  height: 50px;
-}
-
-.itensdomenu{
+  content: "";
+  position: absolute;
+  top: 0;
   width: 20%;
-  margin: 0%;
+  height: 100%;
+  z-index: 3;
 }
 
-.main{
-  display: flex;
-  flex-direction: row;
+.gallery:before {
+  left: 0;
+  background:  linear-gradient(to right, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
 }
 
-.linhadecorativa{
-  width: 30px;
-  height: 3px;
-  align-self: center;
-}
-
-.titulo-section{
-  font-size: 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 600;
-  color:#B362E9;
-  align-self: center;
-  margin-bottom: 0%;
-  margin-left: 10px;
-}
-
-.sanfona{
-  padding-top: 50px;
-  padding-left: 20px;
-  padding-right: 20px;
+.gallery:after {
+  right: 0;
+  background:  linear-gradient(to left, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
 }
