--- a/resources/css/card/card.css
+++ b/resources/css/card/card.css
@@ -11,12 +11,21 @@
     justify-content: center;
 }
 
-.card{
+.card-1{
     position: relative;
     height: 180px;
     width: 277px;
     margin: 20px;
     perspective: 1000px;   
+}
+
+.card-2{
+    position: relative;
+    height: 180px;
+    width: 277px;
+    margin: 20px;
+    perspective: 1000px;  
+     
 }
 
 .card .flip{
@@ -42,3 +51,4 @@
     border-radius:  12px;
     box-shadow: 0 0 8px 0 rgba(0,0,0, 0.3);    
 }
+
