--- a/resources/css/carrosel/carrosel.css
+++ b/resources/css/carrosel/carrosel.css
@@ -7,7 +7,7 @@
   }
   
   body {
-    background-color: #000;
+    background-color: rgb(255, 255, 255);
   }
   
   /* Galeria */
@@ -22,6 +22,23 @@
     overflow: hidden;
   }
   
+  
+  @media (max-width: 999px){
+    .gallery {
+      margin-top: 20px;
+      display: inline-block; 
+      align-items: center;
+    }    
+  }
+
+  @media (min-width:1000px){
+    .gallery{
+      margin-top: 200px;
+    }
+  }
+    
+
+
   .gallery__stream {
     position: relative;
     top: 50%;
@@ -130,10 +147,11 @@
 
 .gallery:before {
   left: 0;
-  background:  linear-gradient(to right, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+  background:  linear-gradient(to right, rgba(189,98,233,1) 0%, rgba(194,114,183,0) 100%);
 }
 
 .gallery:after {
   right: 0;
-  background:  linear-gradient(to left, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+  background:  linear-gradient(to left, rgba(189,98,233,1) 0%, rgba(0,0,0,0) 100%);
 }
+
