eu coloquei um monte de coisas, tu vai conseguir ver kkkkk

--- a/resources/css/estilos/estilos.css
+++ b/resources/css/estilos/estilos.css
@@ -44,9 +44,9 @@
     border-radius: 10px;
     background-color: #B362E9;
     color: white;
-    width: 100px;
+    width: 110px;
     border-style: none;
-    height: 25px;  
+    height: 28px;  
     font-weight: bold;    
     margin: 30px 400px 0 0;
     float: right;
@@ -109,9 +109,9 @@
     border-radius: 10px;
     background-color: #00d42a;
     color: white;
-    width: 100px;
+    width: 110px;
     border-style: none;
-    height: 25px;  
+    height: 28px;  
     font-weight: bold;    
     margin: 30px 400px 0 0;    
 }
@@ -220,9 +220,9 @@ input{
     border-radius: 10px;
     background-color: #B362E9;
     color: white;
-    width: 100px;
+    width: 110px;
     border-style: none;
-    height: 25px;  
+    height: 28px;  
     font-weight: bold;
     margin: 15px 415px 0 0;
     float: right;
@@ -288,9 +288,9 @@ input{
     border-radius: 10px;
     background-color: #B362E9;
     color: white;
-    width: 100px;
+    width: 110px;
     border-style: none;
-    height: 25px;  
+    height: 28px;  
     font-weight: bold;
     margin: -25px 415px 0 0;
     float: right;
@@ -379,9 +379,9 @@ form .newsletter {
     border-radius: 10px;
     background-color: #00d42a;
     color: white;
-    width: 100px;
+    width: 110px;
     border-style: none;
-    height: 25px;  
+    height: 28px;  
     font-weight: bold;    
     margin: 50px 0 0 300px;    
 }
@@ -582,7 +582,7 @@ table{
 /* ----------- seção contato --------------*/
 
 footer{
-    background: #B362E9;
+    /**background: #B362E9;**/
     margin-top: 20px;
 }
 
@@ -607,4 +607,7 @@ address{
 footer p{
     text-align: center;
     margin-top: 10px;
+}
+.rodape{
+    width: 420px;
 }
