--- a/resources/css/accordion/accordion.css
+++ b/resources/css/accordion/accordion.css
@@ -24,7 +24,6 @@
     font-size: 20px;   
     cursor: pointer;
     color: #00D42A;
-    border-bottom: solid 1px grey;
     font-weight: bold;        
 }
 
@@ -57,8 +56,8 @@
     padding: 10px;
     display: block;
     text-decoration: none;
-    color: grey;
-    border-bottom: solid 1px grey;
+    color:#363636;
+    /**border-bottom: solid 1px grey;**/
     font-size: 20px;
 }
 
