--- a/resources/css/menu/menu1.css
+++ b/resources/css/menu/menu1.css
@@ -17,12 +17,13 @@ a :hover {
 .logo {
     font-size: 24px;
     text-decoration: uppercase;
-    letter-spacing: 4px;    
+    /**letter-spacing: 4px;**/
 }
 
 nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 30px;
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
