media query, footer, cultura

--- a/resources/css/carrosel/carrosel.css
+++ b/resources/css/carrosel/carrosel.css
@@ -94,21 +94,21 @@
   /* Backgrounds */
 
 .bg-1 {
-    background-image: url(img/c1.jpg);
+    background-image: url(img/carrossel-06.jpg);
   }
 .bg-2 {
-    background-image: url(img/c2.jpg);
+    background-image: url(img/carrossel-07.jpg);
 }  
 .bg-3 {
-    background-image: url(img/c3.jpg);
+    background-image: url(img/carrossel-08.jpg);
 }
 
 .bg-4 {
-    background-image: url(img/c4.jpg);
+    background-image: url(img/carrossel-09.jpg);
 }
 
 .bg-5 {
-    background-image: url(img/c5.jpg);
+    background-image: url(img/carrossel-10.jpg);
 }
 
 /* Controles */
