inseri video institucioal e  seção de depoimentos

--- a/resources/css/menu/menu1.css
+++ b/resources/css/menu/menu1.css
@@ -8,6 +8,7 @@ a {
     color:#00D42A;
     text-decoration: none;
     transition: 0.3s;
+    font-size: 23px;
 }
 
 a :hover {
@@ -39,6 +40,7 @@ nav {
 .nav-list li {
     /**letter-spacing: 3px;**/
     margin-left: 32px;
+    font-size: 23px;
 }
 
 .mobile-menu { 
