--- a/resources/css/estilos/estilos.css
+++ b/resources/css/estilos/estilos.css
@@ -3,9 +3,6 @@
     padding: 0;   
 }
 
-body{
-    background: #f5f5f5;
-}
 
 .linhadecorativa{
     width: 40px;     
@@ -29,7 +26,7 @@ body{
     height: 40px; 
     margin-top: 15px;    
     width: 160px; 
-    box-shadow: 0 0 0.5em grey;
+    box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.123);
     margin-right: 260px;
     float: right;
 }
@@ -64,32 +61,16 @@ body{
       margin-left: 40px;  
     }    
 }
- /*
-.botao-servicos button{
-    border-radius: 20px;
-    background-color: #B362E9;
-    color: white;
-    width: 131px;
-    border-style: none;
-    height: 37px;
-    font-weight: bold;  
-    margin: 30px 400px 0 0;
-    float: right;
-    font-size: 16px;
-}
 
-@media (max-width: 999px){
-    .botao-servicos button {
-      margin: 30px 35px 0 0;
-      float: right;
-    }    
-}*/
+.botao1{
+    margin-top: 25px;
+}
 
 
 /* ----------- seção jobs --------------*/
 
 .jobs{
-    margin-top: 120px;
+    margin-top: 190px;
 }
 
 @media (max-width: 999px){
@@ -106,7 +87,7 @@ body{
 .jobs-section{
     color: #00D42A;
     display: flex;
-    margin: -22px 0 0 300px;
+    margin: -22px 0 0 50px;
 }
 
 @media (max-width: 999px){
