--- a/resources/css/galeria/galeria.css
+++ b/resources/css/galeria/galeria.css
@@ -3,7 +3,6 @@
     margin: 0;
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
 }
 
 .wg1{
@@ -61,8 +60,8 @@ div.overflow{
     width: 100%;
     height: 100%;
     position: absolute;   
-    background: linear-gradient(transparent, black);
-    opacity: 0.8;
+    background: linear-gradient(transparent, rgb(0, 0, 0));
+    opacity: 0.5;
     transition: all 0.5s ease-in-out;
 }
 
@@ -73,7 +72,7 @@ div.conteudo{
     padding: 0 10px;
     bottom: 10px;
     left: 10px;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 div.conteudo h3{
