--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -405,6 +405,120 @@ table{
     color: #707070;        
 }
 
+/*--------------------------------------*/
+/*-----------analista.html-------------*/
+/*------------------------------------*/
+
+.analista{
+    margin-top: 110px;
+}
+
+.analista-section{
+    color: #00D42A;
+    display: flex;
+    margin: -27px 0 0 200px;
+}
+
+#analista h3{
+    display: flex;
+    margin-left: 200px;
+    margin-top: 80px;
+    color:#7b20b8;
+}
+
+.analista-article{
+    width: 900px;
+    margin-left: 200px;
+    text-align: justify;
+}
+
+.analista-text{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 22px;
+    color: #707070;
+    margin-top: 30px;
+}
+
+.analista-container{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 20%;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 20px 0 0 200px;
+    
+}
+
+.analista-item{
+    color: #00D42A;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
+
+}
+
+.mecandidatar{
+    border-radius: 20px;
+    background-color: #00d42a;
+    color: white;
+    width: 131px;
+    border-style: none;
+    height: 37px;  
+    font-weight: bold;    
+    margin: 15px 250px 0 0;
+    float: right;    
+}
+
+
+.planilha-analista{
+    margin: 50px 0 0 309px;
+    width: 900px;
+}
+
+tr a {
+    color:#B362E9;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+tr a:hover {
+    color:#5f2288;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+table{
+    width: 900px;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
+
+.coluna01{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    color: #707070;  
+    width: 150px;     
+}
+
+.coluna02{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    color: #707070;  
+    width: 256px;    
+}
+
+.coluna03{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    color: #707070;        
+}
+
+
+
+
 
 /*--------------------------------------*/
 /*--------------footer=----------------*/
