--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -406,6 +406,46 @@ table{
 }
 
 /*--------------------------------------*/
+/*-----------------jobs----------------*/
+/*------------------------------------*/
+
+.jobs{
+    margin-top: 120px;
+}
+
+.jobs-article{
+    width: 950px;
+    margin-left: 200px;
+}
+
+.jobs-section{
+    color: #00D42A;
+    display: flex;
+    margin: -26px 0 0 200px;
+}
+
+.jobs-text{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 22px;
+    color: #707070;
+    margin-top: 10px;
+}
+
+.botao-jobs button{
+    background-color: #00d42a;
+    color: white;
+    border-style: none;
+    font-weight: bold;    
+    margin: 30px 400px 0 0;
+    border-radius: 20px;
+    width: 131px;
+    height: 37px;    
+}
+
+
+
+
+/*--------------------------------------*/
 /*-----------analista.html-------------*/
 /*------------------------------------*/
 
