--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -483,7 +483,7 @@ table{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    width: 20%;
+    width: 67%;
     flex-direction: row;
     justify-content: space-between;
     margin: 20px 0 0 200px;
@@ -491,10 +491,10 @@ table{
 }
 
 .analista-item{
-    color: #00D42A;
+    color: #242424;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 22px;
-    font-weight: bold;
+    font-weight: 400;
     margin-top: 10px;
 
 }
