--- a/resources/css/accordion.css
+++ b/resources/css/accordion.css
@@ -5,10 +5,10 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-@media (max-width: 999px){
+@media (max-width: 768px){
     .item{
-        margin-left: 15px;
-        width: 325px;
+        margin-left: 113px;
+        width: 514px;
     }
 }
 
@@ -75,4 +75,11 @@
     height: auto;
     max-height: 200px;
     transform: all;
+}
+
+@media only screen and (max-width: 375px) {
+.item {
+    margin-left: 7px;
+    width: 96%;
+}
 }
