--- a/resources/css/card.css
+++ b/resources/css/card.css
@@ -1,5 +1,5 @@
 
-.containercard{
+/*.containercard{
     height: 100%;
     display: flex;
     align-items: center;
@@ -46,4 +46,4 @@
     border-radius:  12px;
     box-shadow: 0 0 8px 0 rgba(0,0,0, 0.3);    
 }
-
+*/
