--- a/resources/css/menu1.css
+++ b/resources/css/menu1.css
@@ -49,7 +49,7 @@ nav {
     transition: 0.3s;
 }
 
-@media (max-width: 999px){
+@media (max-width: 768px){
   
     .nav-list {
         position: absolute;
@@ -70,6 +70,7 @@ nav {
     }
     .mobile-menu {
         display: block;
+        margin-right: 50px;
     }    
 }
 
