--- a/resources/css/teste-galeri.css
+++ b/resources/css/teste-galeri.css
@@ -12,10 +12,11 @@ img {
 
 .galeria {
     margin: 0 auto;
-    max-width: 2000px;
+    width: 1000px;
     display: flex;
-    flex-wrap:wrap;
-    /*justify-content: center;*/
+    flex-wrap: wrap;
+    /* justify-content: center; */
+    align-items: baseline;
 }
 
 /*.item{
@@ -26,12 +27,21 @@ img {
     flex-grow:1;
 }
 
+
 .item-selected{
     flex-grow: 2;
 }*/
 
 .galeria > div {
-    min-width: 300px;
+    width: 50px;
     padding: 10px;
-    flex: 1 2 200px;
+    flex: 1 2 295px;
+}
+
+.galeria .item {
+    width: 120px;
+    height: auto;
+    margin: 20px 0 0 2px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
